welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (nummod==8 || nummod==2){return true}
  ^